Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiping_service
spec:
  type: LoadBalancer
  selector:
    app: apiping
  ports:
  - port: 8000
    targetPort: 8000
